--- a/chat-app/.gitignore
+++ b/chat-app/.gitignore
@@ -1,4 +1,5 @@
 target/
+.mvn/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -22,3 +23,5 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+/mvnw
+/mvnw.cmd
